[package]

name = "sys-info"
version = "0.5.6"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["system", "information", "cpu", "memory"]
repository = "https://github.com/hedgar2017/sys-info-rs"
description = """
Get system information in Rust.

For now it supports Linux, Mac OS X, Windows and FreeBSD.
"""

links = "info"
build = "build.rs"

[lib]
name = "sys_info"
path = "lib.rs"

[build-dependencies]
cc = "1"

[dependencies]
failure = "0.1.1"